@@ -1,0 +1,10 @@
+<?xml version="1.0"?>
+<metadata>
+    <version>1</version>
+
+    <dependencies>
+        <dependency>profile-ftw.upgrade.tests.profiles:foo</dependency>
+        <dependency>profile-ftw.upgrade.tests.profiles:bar</dependency>
+    </dependencies>
+
+</metadata>
