@@ -11,4 +11,28 @@
         provides="Products.GenericSetup.interfaces.EXTENSION"
         />
 
+    <genericsetup:registerProfile
+        name="foo"
+        title="ftw.upgrade.tests.profiles:foo"
+        directory="foo"
+        description=""
+        provides="Products.GenericSetup.interfaces.EXTENSION"
+        />
+
+    <genericsetup:registerProfile
+        name="bar"
+        title="ftw.upgrade.tests.profiles:bar"
+        directory="bar"
+        description=""
+        provides="Products.GenericSetup.interfaces.EXTENSION"
+        />
+
+    <genericsetup:registerProfile
+        name="baz"
+        title="ftw.upgrade.tests.profiles:baz"
+        directory="baz"
+        description=""
+        provides="Products.GenericSetup.interfaces.EXTENSION"
+        />
+
 </configure>
